@@ -1,3 +1,9 @@
+[B]Version v1.0.1[/B]
+- Fixed www.mediaplaybox.com links
+
+[B]Version v1.0.0[/B]
+- Released
+
 [B]Version v0.0.10[/B]
 - Fixed DesiRulez Source links
 
